##
## Description  : NUKLEAR-TEMPLATES - Makefile.am
## Author       : DRE 2024
## Purpose      : main Makefile
## Revision     : $Id: Makefile.am,v 1.12 2008/12/02 20:49:08 cvsuser Exp $
##
# added old Makefile as add-on that allows backwards compatability to original Makefile recipes.
include "Makefile.old"


# DRE 2022 : the subdirectories alert for automake 
# NOTE: Every line ends in a Carriage Return
SUBDIRS = allegro5\
		glfw_opengl2\
		glfw_opengl3\
		glfw_opengl4\
		sdl_opengl2\
		sdl_opengl3\
		sdl_opengles2\
		sfml_opengl2\
		sfml_opengl3\
		x11\
		x11_opengl2\
		x11_opengl3\
		x11_rawfb\
		x11_xft

# DRE2022 - a generic aclocal flag set for m4 files
ACLOCAL_AMFLAGS = -I m4 -I/usr/include -I/usr/local/include


	

		
