##
## Description  : NUKLEAR-TEMPLATES - Makefile.am
## Author       : DRE 2024
## Purpose      : main Makefile
## Revision     : $Id: Makefile.am,v 1.12 2008/12/02 20:49:08 cvsuser Exp $
##
# added old Makefile as add-on that allows backwards compatability to original Makefile recipes.
include "Makefile.old"


# DRE 2022 : the subdirectories alert for automake 
# NOTE: Every line ends in a Carriage Return
SUBDIRS = 

# DRE2022 - a generic aclocal flag set for m4 files
ACLOCAL_AMFLAGS = -I m4 -I/usr/include -I/usr/local/include
