##
## Description  : Logger - Makefile.am
## Author       : Tie Peng / DRE 2022
## Purpose      : main Makefile
## Revision     : $Id: Makefile.am,v 1.12 2008/12/02 20:49:08 cvsuser Exp $
##
# added old Makefile as add-on that allows backwards compatability to original Makefile recipes.
include "Makefile.old"
